--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,8 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
+DB_DATABASE=bet-bank
+DB_DATABASE_TESTING=bet-bank-testing
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
@@ -32,3 +33,4 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
