--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/passport": "^4.0",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "optimus/api-consumer": "0.2.*",
+        "optimus/genie": "^2.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
